force-app/main/default/objects/Loan_Application__c/fields/Amortization_Terms__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Terms__c</fullName>
    <label>Amortization Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>