force-app/main/default/objects/Loan_Application__c/fields/Amortization_Type__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Type__c</fullName>
    <label>Amortization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjustable Rate</fullName>
            </value>
            <value>
                <fullName>Fixed Rate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>