force-app/main/default/objects/Loan_Application__c/fields/Other_Amortization_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Amortization_Type__c</fullName>
    <label>Other Amortization Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>