force-app/main/default/objects/Loan_Application__c/fields/Other_Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Other_Loan_Purpose__c</fullName>
    <label>Other Loan Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>