force-app/main/default/objects/Loan_Application__c/fields/Secondary_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>