force-app/main/default/objects/Loan_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Loan_Purpose__c</columns>
    <columns>Loan_Amount__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Closing_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>